--- a/fun.html
+++ b/fun.html
@@ -1,14 +1,13 @@
 <html>
     <head>
-      <title>Condingal</title>
+      <title>Functions</title>
     </head>
     <body>
-     <button onclick="myfunction(5)">I do coding with codingal</button>
+     <button  onclick="myfunction(9)">9*4=</button>
      <script>
-        function myfunction(x,y)
-        {
+        function myfunction(x,y){
             if(y===undefined){
-                y=2
+                y=4
             }
             document.write(x*y);
         }
